commiting to my branch

--- a/index.html
+++ b/index.html
@@ -26,7 +26,33 @@
 	</head> 
 
 	<body> 
-
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<blockquote> 
+			“If you wish to make an apple pie from scratch, you must first invent the universe.” 
+			<br/> -Carl Sagan 
+		</blockquote> 
+		
+		<!-- this is the start of the adventure!! --> 
+		<p>
+			this is the start of the invention. 
+			<br/> your adventure starts now. 
+			<br/> <b> invent it. </b>
+		</p> 
+	
+		<!-- make the divs for all of the questions --> 
+		<div>
+			<a href="">what is that over there? WHOA why are we in warp speed!?</a>
+		</div>
+		
+		<div> 
+			<a href = "">when during this adventure do I get pie?</a> 
+		</div>
+	
 	</body> 
 
 </html>
