--- a/index.html
+++ b/index.html
@@ -7,19 +7,8 @@
 <html lang="en">
 
 	<head> 
-		<!-- headings for pages -->
-		<a href="index.html"> <p id = "title">universe a la mode</p> </a> 
-		
-		<!-- bootstrap stuff... --> 
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-		
 		<!-- google fonts --> 
-		<link href="https://fonts.googleapis.com/css?family=Bungee+Hairline|Bungee+Shade" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Fira+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
 		
 		<!-- referencing the external style sheet --> 
 		<link rel = "stylesheet" href = "index.css"> 
@@ -32,21 +21,23 @@
 		</h1> 
 		
 		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
 		<blockquote> 
-			“If you wish to make an apple pie from scratch, you must first invent the universe.” 
-			<br/> -Carl Sagan 
+			If you wish to make an apple pie from scratch, you must first invent the universe. <br/>
+			-Carl Sagan 
 		</blockquote> 
+		</p>
 		
 		<!-- this is the start of the adventure!! --> 
 		<p>
 			this is the start of the invention. 
 			<br/> your adventure starts now. 
-			<br/> <b> invent it. </b>
+			<br/> <b> invent it. </b> get that apple pie. <br/> <br/> 
 		</p> 
 	
 		<!-- make the divs for all of the questions --> 
 		<div>
-			<a href="">what is that over there? WHOA why are we in warp speed!?</a>
+			<a href="warp.html">what is that over there? WHOA why are we in warp speed!?</a>
 		</div>
 		
 		<div> 
