--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 	
 		<!-- make the divs for all of the questions --> 
 		<div>
-			<a href="warp.html">what is that over there? WHOA why are we in warp speed!?</a>
+			<a href="warp.html"> <button> what is that over there? WHOA why are we in warp speed!? </button></a>
 		</div>
 		
 		<div> 
-			<a href = "">when during this adventure do I get pie?</a> 
+			<a href = ""> <button> when during this adventure do I get pie? </button></a> 
 		</div>
 	
 	</body> 
