--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<!-- google fonts --> 
 		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
 		
+		<meta charset="utf-8">
+		
 		<!-- referencing the external style sheet --> 
 		<link rel = "stylesheet" href = "index.css"> 
 	</head> 
@@ -23,7 +25,7 @@
 		<!-- this is the quote that is the inspiration of the project :) --> 
 		<p>
 		<blockquote> 
-			If you wish to make an apple pie from scratch, you must first invent the universe. <br/>
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
 			-Carl Sagan 
 		</blockquote> 
 		</p>
@@ -41,7 +43,7 @@
 		</div>
 		
 		<div> 
-			<a href = ""> <button> when during this adventure do I get pie? </button></a> 
+			<a href = "whenpie.html"> <button> when during this adventure do I get pie? </button></a> 
 		</div>
 	
 	</body> 
