--- a/warp.html
+++ b/warp.html
@@ -1,6 +1,6 @@
-<!-- warp.html --> 
+<!-- whenpie.html --> 
 
-<!-- ABOUT: this is the warp rabit hole for the universe a la mode choose your own adventure game --> 
+<!-- ABOUT: this is the when pie rabit hole for the universe a la mode choose your own adventure game --> 
 <!-- AUTHOR: Rebecca DeMarco --> 
 <!-- DATE: 10/2/2016 --> 
 
@@ -13,20 +13,35 @@
 		<!-- google font --> 
 		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
 		
+		<meta charset="utf-8">
+		
 	</head> 
 	
 	<body> 
 	
-		<div> 
-		<a href = ""> </a> 
-		</div> 
+		<!-- context of your adventure --> 
+		<p>
+			You discover that you are on a foreign spacecraft and an unidentified crewman is running at you.  <br/>
+			The crewman says: <br/> <br/>
+			"Hey! How did you get on this ship!? Anyways, you looked scared, and not from around here. Just <br/>
+			try not to make any funny faces. The ship is equipped with an advanced facial recognition controls <br/>
+			system. Our controls systems guide and serve the inhabitants by using facial recognition software. <br/>
+			You must have some really strong emotions to make the ship go this fast! OH WAIT! You must be a <br/>human!"
+
+			<br/> <br/> 
+			
+			What do you do? 
+			
+			<br/> <br/> 
+		</p> 
+	
+		<!-- make the divs for all of the options --> 
+		<div>
+			<a href="escape.html"> <button> take a few steps back and look around for an escape </button></a>
+		</div>
 		
-		<div> 
-		<a href = ""> </a> 
-		</div> 
-		
-		<div> 
-		<a href = ""> </a> 
+		<div>
+			<a href="sapiens.html"> <button> Say: "Well technically the term is homo sapiens…"</button></a>
 		</div>
 	
 	</body> 
