--- a/whenpie.html
+++ b/whenpie.html
@@ -17,17 +17,28 @@
 	
 	<body> 
 	
-		<div> 
-		<a href = ""> </a> 
+		<!-- context of your adventure --> 
+		<p>
+			You discover that you are on a foreign spacecraft and an unidentified crewman is running at you. <br/>
+			“Hey! How did you get on this ship!? Anyways, you looked scared, and not from around here. Just <br/>
+			try not to make any funny faces. The ship is equipped with an advanced facial recognition controls <br/>
+			system. Our controls systems guide and serve the inhabitants by using facial recognition software. <br/>
+			You must have some really strong emotions to make the ship go this fast! OH WAIT! You must be a human!” 
+
+			<br/> <br/> 
+			
+			What do you do? 
+			
+			<br/> <br/> 
+		</p> 
+	
+		<!-- make the divs for all of the options --> 
+		<div>
+			<a href=""> <button> take a few steps back and look around for an escape </button></a>
+		</div>
 		
-		</div> 
-		
-		<div> 
-		<a href = ""> </a> 
-		</div> 
-		
-		<div> 
-		<a href = ""> </a> 
+		<div>
+			<a href=""> <button> “Well technically the term is homo sapiens…” </button></a>
 		</div>
 	
 	</body> 
