more code updates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<head> 
 		<!-- google fonts --> 
-		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">
 		
 		<meta charset="utf-8">
 		
@@ -30,21 +30,22 @@
 		</blockquote> 
 		</p>
 		
-		<!-- this is the start of the adventure!! --> 
-		<p>
-			this is the start of the invention. 
-			<br/> your adventure starts now. 
-			<br/> <b> invent it. </b> get that apple pie. <br/> <br/> 
-		</p> 
-	
-		<!-- make the divs for all of the questions --> 
-		<div>
-			<a href="warp.html"> <button> what is that over there? WHOA why are we in warp speed!? </button></a>
-		</div>
+		<hr>
 		
-		<div> 
-			<a href = "whenpie.html"> <button> when during this adventure do I get pie? </button></a> 
-		</div>
+			<!-- this is the start of the adventure!! --> 
+			<p>
+				this is the start of the invention. 
+				<br/> your adventure starts now. 
+				<br/> <b> invent it. </b> get that apple pie. <br/> <br/> 
+			</p> 
+	
+			<!-- make the divs for all of the questions --> 
+			<div>
+				<a href="warp.html"> <button> what is that over there? WHOA why are we in warp speed!? </button></a>
+			</div>
+		
+			
+</div>
 	
 	</body> 
 
