--- a/sapiens.html
+++ b/sapiens.html
@@ -11,13 +11,29 @@
 		<!-- referencing the external style sheet --> 
 		<link rel = "stylesheet" href = "index.css"> 
 	
-		<!-- google font things --> 
+		<!-- google font things -->
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">		
 		
 		<meta charset="utf-8">
 	
 	</head> 
 	
 	<body> 
+	
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
+		<blockquote> 
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
+			-Carl Sagan 
+		</blockquote> 
+		</p>
+		
+		<hr>
 	
 		<p> 
 		"Oh! You really are a human! How exciting! Oh, oh! Can you say … oh how do you say… 'fe – etch?'"
