--- a/escape.html
+++ b/escape.html
@@ -12,12 +12,28 @@
 		<link rel = "stylesheet" href = "index.css"> 
 	
 		<!-- google font things --> 
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">
 		
 		<meta charset="utf-8">
 	
 	</head> 
 	
 	<body> 
+	
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
+		<blockquote> 
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
+			-Carl Sagan 
+		</blockquote> 
+		</p>
+		
+		<hr>
 	
 		<p> 
 		"Hey! Let’s get a picture! This is one for the books! We’ve never had an actual human aboard! In fact, <br/>
