--- a/warp.html
+++ b/warp.html
@@ -11,13 +11,28 @@
 		<link rel = "stylesheet" href = "index.css"> 
 		
 		<!-- google font --> 
-		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">
 		
 		<meta charset="utf-8">
 		
 	</head> 
 	
 	<body> 
+	
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
+		<blockquote> 
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
+			-Carl Sagan 
+		</blockquote> 
+		</p>
+
+		<hr>
 	
 		<!-- context of your adventure --> 
 		<p>
