Final commit of content pages

--- a/Juliaending.html
+++ b/Juliaending.html
@@ -33,7 +33,7 @@
 		You grab your laser from your belt and atomize every zombie insight!</b>
 		The man expresses his thanks, and offers a gift in return. </b>
 		You see a perfectly crafted apple pie.</b>
-		Victory is sweetd</b>
+		Victory is sweet</b>
 		</p>
 	
 
