--- a/Rescue1.html
+++ b/Rescue1.html
@@ -6,42 +6,42 @@
 
 <html lang="en"> 
 
-	<head> 
-		<!-- referencing the external style sheet --> 
-		<link rel = "stylesheet" href = "index.css"> 
-		
-		<!-- google font --> 
-		<link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC" rel="stylesheet">
-		
-		<meta charset="utf-8">
-		
-	</head> 
-	
-	<body> 
-	
-		<!-- context of your adventure --> 
-		<p>
-			After hitting light speed you, finally come upon the planet.  It’s grey in hue, you get a shiver as you teleport to the surface. </b></b>  
-			The air is misty and cold; sun doesn’t penetrate to the surface. </b>
-			You close your eyes and hope that this is just imagination</b>
-			But all the while you hear the creature creepin'up behind</b>
-			You're out of time</b></b></b>
+ <head> 
+  <!-- referencing the external style sheet --> 
+  <link rel = "stylesheet" href = "index.css"> 
+  
+  <!-- google font --> 
+  <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC" rel="stylesheet">
+  
+  <meta charset="utf-8">
+  
+ </head> 
+ 
+ <body> 
+ 
+  <!-- context of your adventure --> 
+  <p>
+   After hitting light speed you, finally come upon the planet.  It’s grey in hue, you get a shiver as you teleport to the surface. </b></b>  
+  <p> The air is misty and cold; sun doesn’t penetrate to the surface. </b></p>
+   You close your eyes and hope that this is just imagination</b>
+   But all the while you hear the creature creepin'up behind</b>
+   You're out of time</b></b></b>
 
-			Cause this is: </b></b>
-			<br/> 
-		</p> 
-	
-		<!-- make the divs for all of the options --> 
-		<div>
-			<a href="Juliaending.html"> <button> Thriller </button></a>
-		</div>
-		
-		<div>
-			<a href="Juliaending"> <button> I don't have time for these shenanigans </button></a>
-		</div>
-	
+   Cause this is: </b></b>
+   <br/> 
+  </p> 
+ 
+  <!-- make the divs for all of the options --> 
+  <div>
+   <a href="Juliaending.html"> <button> Thriller </button></a>
+  </div>
+  
+  <div>
+   <a href="Juliaending.html"> <button> I don't have time for these shenanigans </button></a>
+  </div>
+ 
 
 
-	</body> 
-	
+ </body> 
+ 
 </html> 
