--- a/zombies.html
+++ b/zombies.html
@@ -6,44 +6,39 @@
 
 <html lang="en"> 
 
-	<head> 
-		<!-- referencing the external style sheet --> 
-		<link rel = "stylesheet" href = "index.css"> 
-		
-		<!-- google font --> 
-		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
-		
-		<meta charset="utf-8">
-		
-	</head> 
-	
-	<body> 
-	
-		<!-- context of your adventure --> 
-		<p>
-			You discover that you are on a foreign spacecraft and an unidentified crewman is running at you.  <br/>
-			The crewman says: <br/> <br/>
-			"Hey! How did you get on this ship!? Anyways, you looked scared, and not from around here. Just <br/>
-			try not to make any funny faces. The ship is equipped with an advanced facial recognition controls <br/>
-			system. Our controls systems guide and serve the inhabitants by using facial recognition software. <br/>
-			You must have some really strong emotions to make the ship go this fast! OH WAIT! You must be a <br/>human!"
-
-			<br/> <br/> 
-			
-			What do you do? 
-			
-			<br/> <br/> 
-		</p> 
-	
-		<!-- make the divs for all of the options --> 
-		<div>
-			<a href="escape.html"> <button> take a few steps back and look around for an escape </button></a>
-		</div>
-		
-		<div>
-			<a href="sapiens.html"> <button> Say: "Well technically the term is homo sapiens…"</button></a>
-		</div>
-	
-	</body> 
-	
+ <head> 
+  <!-- referencing the external style sheet --> 
+  <link rel = "stylesheet" href = "index.css"> 
+  
+  <!-- google font --> 
+  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
+  
+  <meta charset="utf-8">
+  
+ </head> 
+ 
+ <body> 
+ 
+  <!-- context of your adventure --> 
+  <p>
+   You hear a cry on the SOS channel!  You spring to respond!</b>  </b>
+<p>You scribble down the coordinates of the call, and you jump into action.<br/> </p> 
+   You notice that en-route you can stop along the way to mine precious minerals   <br/>
+   
+   
+   
+   <br/> <br/> 
+  </p> 
+ 
+  <!-- make the divs for all of the options --> 
+  <div>
+   <a href="Rescue1.html"> <button> Go straight to the coordinates where you traced the call!</button></a>
+  </div>
+  
+  <div>
+   <a href="FailPage.html"> <button> Stop and gather precious minerals…after all the signal took a long time to travel to you…. It might not even matter</button></a>
+  </div>
+ 
+ </body> 
+ 
 </html> 
