--- a/sapiens.html
+++ b/sapiens.html
@@ -36,7 +36,8 @@
 		<hr>
 	
 		<p> 
-		"Oh! You really are a human! How exciting! Oh, oh! Can you say … oh how do you say… 'fe – etch?'"
+		<b>"Oh! You really are a human!</b> <br/>
+		How exciting! Oh, oh! Can you say … oh how do you say… 'fe – etch?'"
 		
 		<div> 
 			<a href="continue.html"> <button> Stop trying to make fetch happen. It’s not going to happen. </button></a>
