--- a/stay.html
+++ b/stay.html
@@ -1,4 +1,4 @@
-<!-- escape.html --> 
+<!-- reachout.html --> 
 
 <!-- ABOUT:  --> 
 <!-- AUTHOR: Rebecca DeMarco --> 
@@ -32,19 +32,20 @@
 			-Carl Sagan 
 		</blockquote> 
 		</p>
-		
-		<hr>
-	
-		<p> 
-		<b> "Hey! Let’s get a picture! </b> <br/> <br/>
-		This is one for the books! We’ve never had an actual human aboard! In fact, <br/>
-		we were not sure if you even existed! It was only because we found the documents of the great Norris  <br/>
-		of Chuck that we discovered your kind. We love your kind here! Let’s get a picture!" <br/> <br/> 
-		
-		<div> 
-			<a href="continue.html"> <button> continue </button></a>
-		</div>
-	
-	</body> 
 
+		<hr>
+		
+		<p> 
+		<b> You stayed on the spacecraft... </b> </br> </br>
+		In efforts of team bonding and boosting team morale, the crewman decide to make an apple <br/> 
+		pie. You are confused as to why everyone is typing at the computer. One of the crewmen <br/> 
+		hands you a computer and it soon becomes apparent that they are programming their <br/> 
+		controls systems to make an apple pie for them. You discover that you enjoy team <br/>
+		programming and that you can overcome challeges to help the team make something! Good job!
+		
+		</br> </br> <b>Congratulations! You got to the apple pie. </b> <br/> <br/> 
+		</p>
+
+	</body> 
+	
 </html> 
