--- a/reachout.html
+++ b/reachout.html
@@ -1,4 +1,4 @@
-<!-- escape.html --> 
+<!-- reachout.html --> 
 
 <!-- ABOUT:  --> 
 <!-- AUTHOR: Rebecca DeMarco --> 
@@ -32,19 +32,25 @@
 			-Carl Sagan 
 		</blockquote> 
 		</p>
-		
+
 		<hr>
-	
+		
 		<p> 
-		<b> "Hey! Let’s get a picture! </b> <br/> <br/>
-		This is one for the books! We’ve never had an actual human aboard! In fact, <br/>
-		we were not sure if you even existed! It was only because we found the documents of the great Norris  <br/>
-		of Chuck that we discovered your kind. We love your kind here! Let’s get a picture!" <br/> <br/> 
+		<b> The mentor you reached out to has been helpful... </b> <br/> <br/> 
+		In fact, they are happy that you reached out. Getting the situation resolved was a difficult process, <br/>
+		but your mentor was able to provide support and reassurace. In the end, the crewmen on the foriegn  </br>
+		spacecraft realized the damage they had done. </br> </br> What do you do? <br/> <br/> 
+		</p>
 		
 		<div> 
-			<a href="continue.html"> <button> continue </button></a>
+			<a href="moveon.html"> <button> Move on to a new planet </button></a>
 		</div>
-	
+		
+		<div> 
+			<a href="stay.html"> <button> Stay on the spacecraft. </button></a>
+		</div>
+		
 	</body> 
-
+	
 </html> 
+		
