--- a/reconsider.html
+++ b/reconsider.html
@@ -1,4 +1,4 @@
-<!-- escape.html --> 
+<!-- reconsider.html --> 
 
 <!-- ABOUT:  --> 
 <!-- AUTHOR: Rebecca DeMarco --> 
@@ -32,19 +32,19 @@
 			-Carl Sagan 
 		</blockquote> 
 		</p>
-		
+
 		<hr>
-	
+		
 		<p> 
-		<b> "Hey! Let’s get a picture! </b> <br/> <br/>
-		This is one for the books! We’ve never had an actual human aboard! In fact, <br/>
-		we were not sure if you even existed! It was only because we found the documents of the great Norris  <br/>
-		of Chuck that we discovered your kind. We love your kind here! Let’s get a picture!" <br/> <br/> 
+		What has happened <b> is online harrassment. </b> <br/> 
+		You should <b> go back </b> and <b> reconsider </b> your options. </br> </br> 
+		</p> 
 		
 		<div> 
-			<a href="continue.html"> <button> continue </button></a>
+			<a href="continue.html"> <button> Go Back. </button></a>
 		</div>
-	
+		
 	</body> 
-
+	
 </html> 
+		
