--- a/report.html
+++ b/report.html
@@ -1,4 +1,4 @@
-<!-- escape.html --> 
+<!-- reachout.html --> 
 
 <!-- ABOUT:  --> 
 <!-- AUTHOR: Rebecca DeMarco --> 
@@ -32,19 +32,26 @@
 			-Carl Sagan 
 		</blockquote> 
 		</p>
-		
+
 		<hr>
-	
+		
 		<p> 
-		<b> "Hey! Let’s get a picture! </b> <br/> <br/>
-		This is one for the books! We’ve never had an actual human aboard! In fact, <br/>
-		we were not sure if you even existed! It was only because we found the documents of the great Norris  <br/>
-		of Chuck that we discovered your kind. We love your kind here! Let’s get a picture!" <br/> <br/> 
+		<b>You manage to find documentation on how to report online harrassment at your orgranizaiton... </b> 
+		</br> </br>
+		Finding the document might have been difficult, but it lead you to the appropriate resources to report the situation. <br/> 
+		Resolving the situation may not have been easy, but you have options. 
+		
+		</br> </br> What do you do? <br/> <br/> 
+		</p>
 		
 		<div> 
-			<a href="continue.html"> <button> continue </button></a>
+			<a href="moveon.html"> <button> Move on to a new planet </button></a>
 		</div>
-	
+		
+		<div> 
+			<a href="stay.html"> <button> Stay on the spacecraft. </button></a>
+		</div>
+		
 	</body> 
-
+	
 </html> 
