--- a/zombies.html
+++ b/zombies.html
@@ -1,34 +1,46 @@
-<!-- whenpie.html --> 
+<!-- zombies.html --> 
 
-<!-- ABOUT: this is the when pie rabit hole for the universe a la mode choose your own adventure game --> 
-<!-- AUTHOR: Rebecca DeMarco --> 
+<!-- AUTHOR: Julia Worrell and Rebecca DeMarco --> 
 <!-- DATE: 10/2/2016 --> 
 
 <html lang="en"> 
 
- <head> 
-  <!-- referencing the external style sheet --> 
-  <link rel = "stylesheet" href = "index.css"> 
-  
-  <!-- google font --> 
-  <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Space+Mono" rel="stylesheet">
-  
-  <meta charset="utf-8">
-  
- </head> 
- 
- <body> 
- 
+	<head> 
+	
+		<!-- referencing the external style sheet --> 
+		<link rel = "stylesheet" href = "index.css"> 
+	
+		<!-- google font things --> 
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">
+		
+		<meta charset="utf-8">
+	
+	</head> 
+	
+	<body> 
+	
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
+		<blockquote> 
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
+			-Carl Sagan 
+		</blockquote> 
+		</p>
+
+		<hr>
   <!-- context of your adventure --> 
   <p>
-   You hear a cry on the SOS channel!  You spring to respond!</b>  </b>
-<p>You scribble down the coordinates of the call, and you jump into action.<br/> </p> 
-   You notice that en-route you can stop along the way to mine precious minerals   <br/>
-   
-   
-   
-   <br/> <br/> 
-  </p> 
+   <b> You hear a cry on the SOS channel!  You spring to respond! </b>
+	<p>
+	You scribble down the coordinates of the call, and you jump into action.<br/>  
+	You notice that en-route you can stop along the way to mine precious minerals  
+	<br/> <br/> 
+	</p> 
  
   <!-- make the divs for all of the options --> 
   <div>
@@ -36,7 +48,7 @@
   </div>
   
   <div>
-   <a href="FailPage.html"> <button> Stop and gather precious minerals…after all the signal took a long time to travel to you…. It might not even matter</button></a>
+   <a href="failPage.html"> <button> Stop and gather precious minerals…after all the signal took a long time to travel to you…. It might not even matter</button></a>
   </div>
  
  </body> 
