--- a/Juliaending.html
+++ b/Juliaending.html
@@ -1,42 +1,54 @@
-<!-- whenpie.html --> 
+<!-- Juliaending.html --> 
 
-<!-- ABOUT: this is the when pie rabit hole for the universe a la mode choose your own adventure game --> 
 <!-- AUTHOR: Rebecca DeMarco and Julia Worrell  --> 
 <!-- DATE: 10/2/2016 --> 
 
 <html lang="en"> 
 
 	<head> 
+	
 		<!-- referencing the external style sheet --> 
 		<link rel = "stylesheet" href = "index.css"> 
-		
-		<!-- google font --> 
-		<link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC" rel="stylesheet">
+	
+		<!-- google font things --> 
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">
 		
 		<meta charset="utf-8">
-		
+	
 	</head> 
 	
 	<body> 
 	
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
+		<blockquote> 
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
+			-Carl Sagan 
+		</blockquote> 
+		</p>
+
+		<hr>
+	
 		<!-- context of your adventure --> 
 		<p>
-			You come upon a man holding a package surrounded by rabid zombies yelling, </b>
-			“Brains?!?! What Brains?!? I’m gonna starve!!!” </b>
-			The zombie mob continues yelling insults at the man, ganging up on him.  You jump in! </b>
-			You push zombies aside and tell them to go back to the graves they came from! </b>
-			</b></b>
-			<br/> 
+			<b> You come upon a man holding a package surrounded by rabid zombies yelling, </b> <br/> <br/>
+			“Brains?!?! What Brains?!? I’m gonna starve!!!” <br/>
+			The zombie mob continues yelling insults at the man, ganging up on him.  You jump in! <br/>
+			You push zombies aside and tell them to go back to the graves they came from! 
+			<br/> <br/> 
 		</p> 
 	
 		<p>
-		You grab your laser from your belt and atomize every zombie insight!</b>
-		The man expresses his thanks, and offers a gift in return. </b>
-		You see a perfectly crafted apple pie.</b>
-		Victory is sweetd</b>
+		You grab your laser from your belt and atomize every zombie insight!<br/>
+		The man expresses his thanks, and offers a gift in return. <br/>
+		You see a perfectly crafted apple pie.<br/>
+		Victory is sweet!
 		</p>
-	
-
 
 	</body> 
 	
