--- a/Rescue1.html
+++ b/Rescue1.html
@@ -1,33 +1,49 @@
-<!-- whenpie.html --> 
+<!-- Rescue1.html --> 
 
-<!-- ABOUT: this is the when pie rabit hole for the universe a la mode choose your own adventure game --> 
 <!-- AUTHOR: Rebecca DeMarco and Julia Worrell  --> 
 <!-- DATE: 10/2/2016 --> 
 
 <html lang="en"> 
 
- <head> 
-  <!-- referencing the external style sheet --> 
-  <link rel = "stylesheet" href = "index.css"> 
-  
-  <!-- google font --> 
-  <link href="https://fonts.googleapis.com/css?family=IM+Fell+DW+Pica+SC" rel="stylesheet">
-  
-  <meta charset="utf-8">
-  
- </head> 
- 
- <body> 
+	<head> 
+	
+		<!-- referencing the external style sheet --> 
+		<link rel = "stylesheet" href = "index.css"> 
+	
+		<!-- google font things --> 
+		<link href="https://fonts.googleapis.com/css?family=Caveat|Neucha|Pacifico" rel="stylesheet">
+		
+		<meta charset="utf-8">
+	
+	</head> 
+	
+	<body> 
+	
+		<!-- giving our landing page that all important heading -->
+		<h1> 
+			universe a la mode 
+		</h1> 
+		
+		<!-- this is the quote that is the inspiration of the project :) --> 
+		<p>
+		<blockquote> 
+			"If you wish to make an apple pie from scratch, you must first invent the universe." <br/>
+			-Carl Sagan 
+		</blockquote> 
+		</p>
+
+		<hr>
  
   <!-- context of your adventure --> 
   <p>
-   After hitting light speed you, finally come upon the planet.  It’s grey in hue, you get a shiver as you teleport to the surface. </b></b>  
-  <p> The air is misty and cold; sun doesn’t penetrate to the surface. </b></p>
-   You close your eyes and hope that this is just imagination</b>
-   But all the while you hear the creature creepin'up behind</b>
-   You're out of time</b></b></b>
+   <b>After hitting light speed you, finally come upon the planet.  </b> <br/> <br/> 
+   It’s grey in hue, you get a shiver as you teleport to the surface. <br/>  
+   The air is misty and cold; sun doesn’t penetrate to the surface. <br/>
+   You close your eyes and hope that this is just imagination<br/>
+   But all the while you hear the creature creepin'up behind<br/>
+   You're out of time<br/> <br/> 
 
-   Cause this is: </b></b>
+   Cause this is: <br/>
    <br/> 
   </p> 
  
