--- a/moveon.html
+++ b/moveon.html
@@ -37,18 +37,18 @@
 		
 		<p> 
 		<b>You have arrived at your new destination in your journey across the universe... </b> </br> </br>
-		You find lush green grass flowing with the wind next to a nearby stream. In the distant treeline </br> 
+		You find lush green grass flowing with the wind next to a nearby stream. In the distant tree line </br> 
 		you notice movement. You cross the stream filled with pebbles to approach the trees. You assume <br/> 
 		that the movement you had seen were the red fruit falling from the trees. Being naive, you <br/> 
 		pick up the fruit only to have what seems to be a cross between a koala bear and a chameleon <br/>
-		appear from underground dwellings. Unkown to you, the red fruit is a delicacy to the creatures. <br/> 
+		appear from underground dwellings. Unknown to you, the red fruit is a delicacy to the creatures. <br/> 
 		Just when you start to fear they will do some harm, you realize the chants were in preparation <br/>
 		for their sacred tradition of cooking the red fruit. <br/> <br/> 
 		
 		You inhale the crisp air and appreciate the lightness of the scent. Though slightly different in <br/> 
 		shape from the apples you know on Earth, you realize that they are actually starting to make <br/> 
 		apple pie. Except there is another light green fruit that you do not recognize. The fruit <br/> 
-		carmalizes and the sauce is poured over vanilla bean ice cream. After the hospitable creatures <br/> 
+		caramelizes and the sauce is poured over vanilla bean ice cream. After the hospitable creatures <br/> 
 		serve you apple pie a la mode, they tell you the sauce is one of spiced pear, which complements <br/> 
 		the cinnamon apple pie nicely. In a moment of bliss, you are happy that you moved on from your <br/> 
 		previous situation to happier moments. 
