--- a/continue.html
+++ b/continue.html
@@ -41,7 +41,7 @@
 		they are actually books that have flexible electronic pages. You notice the person next to you whose book is open to a <br/>
 		picture of you! <br/> <br/>
 		Pointing to your picture, you say to the crewman "Hey, that's me!" The crewman responds, "Yes, we are happy to have you <br/>
-		visit." But you know they are not being truthful, because your glasses automatically tanslate the alien text. You <br/> 
+		visit." But you know they are not being truthful, because your glasses automatically translate the alien text. You <br/> 
 		discover that, through this species means of virtual communication, they have actually been making cruel jokes and <br/>
 		snide comments; targeting you for harassment. The crewman leaves the room, but leaves the book on the side table. <br/> <br/> 
 		What do you do? 
