--- a/report.html
+++ b/report.html
@@ -36,7 +36,7 @@
 		<hr>
 		
 		<p> 
-		<b>You manage to find documentation on how to report online harrassment at your orgranizaiton... </b> 
+		<b>You manage to find documentation on how to report online harrassment at your organization... </b> 
 		</br> </br>
 		Finding the document might have been difficult, but it lead you to the appropriate resources to report the situation. <br/> 
 		Resolving the situation may not have been easy, but you have options. 
