--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 		</p>
 		
 		<hr>
-		
+			<!- context --> 
+			<p> Welcome to a choose your own adventure site! <br/> <br/> </p>
+	
 			<!-- this is the start of the adventure!! --> 
 			<p>
-				this is the start of the invention. 
-				<br/> your adventure starts now. 
-				<br/> <b> invent it. </b> get that apple pie. <br/> <br/> 
+				This is the start of the invention. 
+				<br/> Your adventure starts now. 
+				<br/> <b> Invent it. </b> Get that apple pie. <br/> <br/> 
 			</p> 
 	
 			<!-- make the divs for all of the questions --> 
