--- a/moveon.html
+++ b/moveon.html
@@ -22,7 +22,7 @@
 	
 		<!-- giving our landing page that all important heading -->
 		<h1> 
-			universe a la mode 
+			<a href = "https://spacedinosaur95.github.io/universealamode/">universe a la mode </a>
 		</h1> 
 		
 		<!-- this is the quote that is the inspiration of the project :) --> 
