--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 	
 			<!-- make the divs for all of the questions --> 
 			<div>
-				<a href="warp.html"> <button> what is that over there? WHOA why are we in warp speed!? </button></a>
+				<a href="warp.html"> <button> What is that over there? WHOA why are we in warp speed!? </button></a>
 			</div>
 		
 			<div>
-				<a href="zombies.html"> <button> you hear a mysterious SOS call </button></a>
+				<a href="zombies.html"> <button> You hear a mysterious SOS call </button></a>
 			</div>
 			
 </div>
