--- a/warp.html
+++ b/warp.html
@@ -36,8 +36,8 @@
 	
 		<!-- context of your adventure --> 
 		<p>
-			<b>You discover that you are on a foreign spacecraft... </b> <br/> <br/>
-			and an unidentified crewman is running at you. The crewman says: <br/> <br/>
+			<b>You discover that you are on a foreign spacecraft and an unidentified crewman is running at you. <br/> 
+			The crewman says: </b> <br/> <br/>
 			"Hey! How did you get on this ship!? Anyways, you looked scared, and not from around here. Just <br/>
 			try not to make any funny faces. The ship is equipped with an advanced facial recognition controls <br/>
 			system. Our controls systems guide and serve the inhabitants by using facial recognition software. <br/>
