--- a/sapiens.html
+++ b/sapiens.html
@@ -40,11 +40,11 @@
 		How exciting! Oh, oh! Can you say … oh how do you say… 'fe – etch?'"
 		
 		<div> 
-			<a href="continue.html"> <button> Stop trying to make fetch happen. It’s not going to happen. </button></a>
+			<a href="continue.html"> <button> "Stop trying to make fetch happen. It’s not going to happen." </button></a>
 		</div>
 		
 		<div> 
-			<a href="continue.html"> <button> Say: "I don’t even go here." </button></a>
+			<a href="continue.html"> <button> "I don’t even go here." </button></a>
 		</div>
 	
 	</body> 
